--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   ],
   "license": "MIT",
   "scripts": {
+    "start": "npm run cc && npx gatsby develop",
+    "cc": "rm -rf .cache",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "test": "echo \"Error: no test specified\" && exit 1"
