--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-plugin-sass": "^2.0.1",
     "gatsby-source-contentful": "^2.0.1",
     "gatsby-transformer-remark": "^2.1.3",
+    "gsap": "^2.0.2",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "nanoid": "^1.2.3",
