check browser modal

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "kamil jozwik <kamil@kamiljozwik.com>",
   "dependencies": {
+    "detect-browser": "^4.0.4",
     "disqus-react": "^1.0.5",
     "dotenv": "^6.0.0",
     "gatsby": "2.0.3",
