--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "kamil jozwik <kamil@kamiljozwik.com>",
   "dependencies": {
+    "browser-detect": "^0.2.28",
     "detect-browser": "^4.0.4",
     "disqus-react": "^1.0.5",
     "dotenv": "^6.0.0",
